# os-lib

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.org  _dynamic_not_linked.cpp  _dynamic_not_linked.hpp  add.cpp  add.h  and_static.cpp  and_static.h  answer.cpp  answer.h  answer.hpp  atomics.h  aux.c  aux.h  average.cpp  avg_static.cpp  avg_static.h  bee.cpp  bee.hpp  birb.cpp  birb.hpp  bottles.cpp  bottles.hpp  cluster_node.c  cluster_node.h  combination.cpp  combination.h  combinatorics.cpp  combinatorics.h  comparotor.cpp  compile_plugins.sh  duplicates_tree.c  duplicates_tree.h  dyn1.cpp  dyn1.h  dyn2.cpp  dyn2.h  (+163 more)
dynamic/: Interface.cpp  Interface.h
dynamicLinkingLibrary/: CaesarCypher.cpp  CaesarCypher.h
dynamicLoadingLibrary/: ROT1Cypher.cpp  ROT1Cypher.h
first-dynamic-lib/: CMakeLists.txt  Makefile  libfirst-dynamic-lib.dylib  tweetybird.cpp
firstDynamic/: logarithm.cpp  logarithm.h
framework/: CMakeLists.txt
framework/include/: lib.h
framework/private/: util.h
framework/src/: lib.cpp
lib/: dynamic.hpp  dynamic_linkage.hpp  static.hpp
libA/: A.c  A.h  CMakeLists.txt
libB/: B.c  B.h  CMakeLists.txt
libC/: C.c  C.h  CMakeLists.txt
libbar/: CMakeLists.txt  bar.c  bar.h
libbaz/: CMakeLists.txt  baz.c  baz.h
libfnv/: CMakeLists.txt  libfnv32.c  libfnv32.h
libfoo/: CMakeLists.txt  foo.c
libs/: CMakeLists.txt
libstress/: CMakeLists.txt  libstress.c  libstress.h
libthermal/: CMakeLists.txt  libthermal.c  libthermal.h
loadable/: Makefile  factorial.cpp  factorial.h  mul.h
plugins/: algos.cpp  common.h  strUtils.cpp
second-dynamic-lib/: CMakeLists.txt  Makefile  killme.cpp  libsecond-dynamic-lib.dylib
secondDynamic/: exponentiation.cpp  exponentiation.h
shared/: Makefile  fibonacci.cpp  fibonacci.h  sub.h
shared1/: CMakeLists.txt  shared_link1.cpp  shared_link1.h
shared2/: CMakeLists.txt  shared_link2.cpp  shared_link2.h
shared_lib1/: CMakeLists.txt  hello_world_dynamic1.cpp  hello_world_dynamic1.h
shared_lib2/: CMakeLists.txt  hello_world_dynamic2.cpp  hello_world_dynamic2.h
src/: CMakeLists.txt  dl_loading.cpp  dynamic_linkage.cpp  dynamic_linkage.hpp  dynamic_load.cpp  dynamic_load.hpp  first_supplier.cpp  main.cpp  second_supplier.cpp  sharedCompile.cpp  sharedRuntime.cpp  static.cpp  static.hpp  staticCompile.cpp  third_supplier.cpp
static/: Application.cpp  Application.h  CMakeLists.txt  Makefile  add.h  multiplication.cpp  multiplication.h  power.cpp  power.h  static_link.cpp  static_link.h
static-lib/: CMakeLists.txt  Makefile  destory.cpp
staticLibrary/: charToNumCypher.cpp  charToNumCypher.h
static_lib/: CMakeLists.txt  hello_world_static.cpp  (+1 more)
(+18 files in other folders)
